made menu buttons function well and independent of language (using strings.xml) TODO: Critical: move stuff out of UI thread. Dropping upwards of 500 frames during level gen at higher difficulties

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -60,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:onClick="onCheckboxClicked"
         android:textSize="30sp"
         android:text="@string/mult"
         android:id="@+id/button_mult"
