--- a/app/src/main/res/layout/activity_keen.xml
+++ b/app/src/main/res/layout/activity_keen.xml
@@ -9,8 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.yegie.keenforandroid.KeenActivity">
 
-    <!--<org.yegie.keenforandroid.KeenView-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_width="match_parent"/>-->
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        style="@android:style/Widget.ProgressBar.Large"
+        android:id="@+id/progress_bar" />
 
 </LinearLayout>
