Fixed restoring to an old state bug
// When a game was resumed without restarting the activity the
// container would already have a previous game view and if a new
// view is just added it would be added off-screen below the old
// one. The user would continue to play the old game, but save state
// and related things would be called on the new invisible game.

--- a/app/src/main/res/layout/activity_keen.xml
+++ b/app/src/main/res/layout/activity_keen.xml
@@ -16,4 +16,13 @@
         style="@android:style/Widget.ProgressBar.Large"
         android:id="@+id/progress_bar" />
 
+    <!-- This gets replaced by the real game view.
+        Primarily here to generate a view ID.
+    -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/game_view"
+        />
+
 </LinearLayout>
