Fixed some checkstyle errors and added colors to the values folder

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="@string/title"
+        android:textColor="@color/colorBlack"
         android:textSize="54sp"
         android:layout_gravity="center"
         android:layout_margin="16dp"
@@ -32,6 +33,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:textSize="25sp"
+        android:textColor="@color/colorBlack"
         android:text="@string/play"/>
 
     <Spinner
@@ -44,6 +46,7 @@
         android:layout_marginLeft="20dp"
         android:id="@+id/button_size"
         android:textSize="25sp"
+        android:textColor="@color/colorBlack"
         android:layout_gravity="center_horizontal" />
 
 
@@ -57,6 +60,7 @@
         android:layout_marginLeft="20dp"
         android:id="@+id/button_diff"
         android:textSize="25sp"
+        android:textColor="@color/colorBlack"
         android:layout_gravity="center_horizontal" />
 
     <CheckBox
@@ -66,6 +70,7 @@
         android:layout_marginBottom="5dp"
         android:onClick="onCheckboxClicked"
         android:textSize="30sp"
+        android:textColor="@color/colorBlack"
         android:text="@string/mult"
         android:id="@+id/button_mult"
         android:layout_gravity="center_horizontal" />
@@ -80,6 +85,7 @@
         android:layout_marginRight="20dp"
         android:visibility="invisible"
         android:textSize="25sp"
+        android:textColor="@color/colorBlack"
         android:text="@string/cont"/>
 
 </LinearLayout>
