--- a/app/src/main/res/layout/menu_spinner_layout.xml
+++ b/app/src/main/res/layout/menu_spinner_layout.xml
@@ -4,5 +4,5 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textSize="35sp"
-    android:textColor="#000000"
+    android:textColor="@color/colorBlack"
     android:gravity="center"/>
